--- a/app/components/add-bookmark-form/add-bookmark-form.html
+++ b/app/components/add-bookmark-form/add-bookmark-form.html
@@ -1,19 +1,19 @@
 <div>
-    <label for="bookmarkUrl">Bookmark URL</label>
+    <label>Bookmark URL</label>
     <br>
-    <input type="url" name="bookmarkUrl" id="bookmarkUrl" value="" placeholder="Enter bookmark URL" ng-model="bookmarkUrl">
+    <input type="text" placeholder="Enter bookmark URL" ng-model="bookmarkUrl">
+    
+    <br><br>
+
+    <label>Bookmark Title</label>
+    <br>
+    <input type="text" placeholder="Enter bookmark title" ng-model="bookmarkTitle">
 
     <br><br>
 
-    <label for="bookmarkTitle">Bookmark Title</label>
+    <label>Tags: (separated by commas)</label>
     <br>
-    <input type="url" name="bookmarkTitle" id="bookmarkTitle" value="" placeholder="Enter bookmark title" ng-model="bookmarkTitle">
-
-    <br><br>
-
-    <label for="tags">Tags: (separated by commas)</label>
-    <br>
-    <input type="url" name="tags" id="tags" value="" placeholder="Enter bookmark tags" ng-model="tags">
+    <input type="text" placeholder="Enter bookmark tags" ng-model="tags">
 
     <br><br>
 
